# MyTTPy

./: .gitignore  example.py  pyproject.toml  readme.md
MyTTPy/: __init__.py  client.py  global_urls.py  parser.py  player.py  request_handler.py
